--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>This is for sale!</h1>
+						<h1>This domain is for sale!</h1>
 						<h1>دامین بفروش می رسد</h1>
 						<p>Contact Us:<br />
 						<a href="mailto:persiancity@gmail.com">persiancity [at] gmail.com</a></p>
