--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>This domain is for sale!</h1>
 						<h1>دامین بفروش می رسد</h1>
+						<script>
+							var dm = window.location;
+							var price = 0;
+							dm = dm.toString().split('?');
+							if(dm[1]=='asanmarket.ir')
+								price = 600;
+							if(dm[1]=='asanmarket.com')
+								price = 1000;
+							if(price>0) {
+								document.write('<p><b>قیمت مقطوع: </b> '+price+' دلار<br>');
+								document.write('پرداخت با تتر, پی پال و یا وبمانی پذیرفته می شود)</p>');
+							}
+							</script>
 						<p>Contact Us:<br />
 						<a href="mailto:persiancity@gmail.com">persiancity [at] gmail.com</a></p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
