--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								price = 1000;
 							if(price>0) {
 								document.write('<p><b>قیمت مقطوع: </b> '+price+' دلار<br>');
-								document.write('پرداخت با تتر, پی پال و یا وبمانی پذیرفته می شود)</p>');
+								document.write('پرداخت با تتر, پی پال و یا وبمانی پذیرفته می شود</p>');
 							}
 							</script>
 						<p>Contact Us:<br />
